--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -19,16 +19,17 @@ jobs:
 
           - name: latest supported versions
             os: ubuntu-latest
-            python: '3.10'
+            python-version: '3.10'
 
     steps:
-      - name: Install Python ${{ matrix.python }}
-        uses: actions/setup-python@v4
+      - name: Install Conda w/ Python ${{ matrix.python-version }}
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: ${{ matrix.python }}
+          python-version: ${{ matrix.python-version }}
+          channels: conda-forge
       - name: Install Dependencies
         run: |
-          pip install tox
+          conda install tox
       - name: Run Tests
         run: |
           tox --version
