--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -1,4 +1,4 @@
-name: Tests
+name: Tests-conda
 
 on:
   push:
@@ -20,6 +20,8 @@ jobs:
           - name: latest supported versions
             os: ubuntu-latest
             python-version: '3.10'
+            auto-activate-base: true
+            activate-environment: ""
 
     steps:
       - name: Install Conda w/ Python ${{ matrix.python-version }}
