--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -20,8 +20,7 @@ jobs:
           - name: latest supported versions
             os: ubuntu-latest
             python-version: '3.10'
-            auto-activate-base: true
-            activate-environment: ""
+            activate-environment: "test"
 
     steps:
       - name: Install Conda w/ Python ${{ matrix.python-version }}
