--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -20,7 +20,6 @@ jobs:
           - name: latest supported versions
             os: ubuntu-latest
             python-version: '3.10'
-            activate-environment: "test"
 
     steps:
       - name: Install Conda w/ Python ${{ matrix.python-version }}
@@ -32,6 +31,6 @@ jobs:
         run: |
           conda install tox
       - name: Run Tests
+        shell: bash -el {0}
         run: |
-          conda activate test
           tox --version
