--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -28,6 +28,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
       - name: Install Dependencies
+        shell: bash -el {0}
         run: |
           conda install tox
       - name: Run Tests
