--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -21,6 +21,16 @@ jobs:
             os: ubuntu-latest
             python-version: '3.10'
 
+          - name: oldest supported versions
+            os: ubuntu-latest
+            python-version: '3.7'
+            toxenv: py37-test-oldest
+
+          - name: macOS 11
+            os: macos-11
+            python-version: '3.10'
+            toxenv: py310-test-latest
+
     steps:
       - name: Install Conda w/ Python ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2
