--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -32,9 +32,14 @@ jobs:
             toxenv: py310-test-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Install Conda w/ Python ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2
         with:
+          activate-environment: soliket-tests
+          environment-file: soliket-tests.yml
+          auto-activate-base: false
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
       - name: Install Dependencies
