--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -49,4 +49,4 @@ jobs:
       - name: Run Cobaya
         shell: bash -el {0}
         run: |
-          python -c "import cobaya"
+          python -c "import cobaya; print(cobaya.__version__)"
