--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ getdist
 cobaya
 pyccl
 sacc
+fgspectra @ git+https://github.com/simonsobs/fgspectra@act_sz_x_cib#egg=fgspectra
+mflike @ git+https://github.com/simonsobs/lat_mflike@master
