--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -42,6 +42,7 @@ jobs:
           auto-activate-base: false
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
+          use-mamba: true
       - name: Install class
         shell: bash -el {0}
         run: |
