--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -19,15 +19,18 @@ jobs:
 
           - name: latest supported versions
             os: ubuntu-latest
+            miniforge-variant: Mambaforge
             python-version: '3.10'
 
           - name: oldest supported versions
             os: ubuntu-latest
+            miniforge-variant: Mambaforge
             python-version: '3.7'
             toxenv: py37-test-oldest
 
           - name: macOS 11
             os: macos-11
+            miniforge-variant: Mambaforge
             python-version: '3.10'
             toxenv: py310-test-latest
 
@@ -41,14 +44,11 @@ jobs:
           environment-file: soliket-tests.yml
           auto-activate-base: false
           python-version: ${{ matrix.python-version }}
-          channels: conda-forge
           use-mamba: true
       - name: Install class
         shell: bash -el {0}
         run: |
           if [[ ${MATRIX_OS} == "macos-11" ]]; then
-            export LDFLAGS="-L/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib"
-            export LDFLAGS="$LDFLAGS -L/Users/runner/miniconda3/envs/test/lib"
             . install_class_osx.sh
           fi
         env:
