--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -47,6 +47,7 @@ jobs:
         shell: bash -el {0}
         run: |
           if [[ ${MATRIX_OS} == "macos-11" ]]; then
+            export LDFLAGS="-L/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib"
             . install_class_osx.sh
           fi
         env:
