--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,10 @@ envlist =
 
 [testenv]
 
+allowlist_externals = pytest, which
+
+skip_install = true
+
 # Pass through the following environment variables which may be needed for the CI
 # passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS
 
@@ -13,4 +17,8 @@ envlist =
 
 commands =
     pip freeze
+    which pip
+    which pytest
+    which gfortran
+    which virtualenv
     pytest --version
