--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist =
 
 allowlist_externals = pytest, which
 
-skip_install = true
+# skip_install = true
 
 # Pass through the following environment variables which may be needed for the CI
 # passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS
