--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ allowlist_externals = pytest, which
 # skip_install = true
 
 # Pass through the following environment variables which may be needed for the CI
-passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS
+passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS CMAKE_PREFIX_PATH CMAKE_ARGS
 
 # Run the tests in a temporary directory to make sure that we don't import
 # this package from the source tree
