working? tox conda

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,15 @@ envlist =
 
 [testenv]
 
-conda_env = soliket-tests.yml
+allowlist_externals = which
 
-skip_install = true
+conda_env = soliket-tests.yml
+conda_setup_args=
+    --override-channels
+conda_install_args=
+    --override-channels
+
+# skip_install = true
 
 # Pass through the following environment variables which may be needed for the CI
 # passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS
@@ -22,4 +28,7 @@ commands =
     which pytest
     which gfortran
     which virtualenv
+    which python
+    python --version
     pytest --version
+    python -c "import cobaya; print(cobaya.__version__)"
