--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -20,6 +20,7 @@ jobs:
           - name: latest supported versions
             os: ubuntu-latest
             python-version: '3.10'
+            toxenv: py37-test-oldest
 
           - name: oldest supported versions
             os: ubuntu-latest
@@ -37,16 +38,10 @@ jobs:
       - name: Install Conda w/ Python ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: soliket-tests
-          environment-file: soliket-tests.yml
           auto-activate-base: false
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
       - name: Run Tox
         shell: bash -el {0}
         run: |
-          tox --version
-      - name: Run Cobaya
-        shell: bash -el {0}
-        run: |
-          python -c "import cobaya; print(cobaya.__version__)"
+           tox -e ${{ matrix.toxenv }} ${{ matrix.toxargs }} -- ${{ matrix.toxposargs }}
