added shell, swig

--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -42,6 +42,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
       - name: Install Dependencies
+        shell: bash -el {0}
         run: |
           conda install pip
           pip install tox-conda
