remove non-direct deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,13 +19,13 @@ install_requires =
     numpy
     scipy
     pandas
-    pyyaml
-    py-bobyqa
-    packaging
-    tqdm
-    portalocker
-    dill
-    fuzzywuzzy
+#    pyyaml
+#    py-bobyqa
+#    packaging
+#    tqdm
+#    portalocker
+#    dill
+#    fuzzywuzzy
     astropy
     camb
     cosmopower
