--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -20,7 +20,7 @@ jobs:
           - name: latest supported versions
             os: ubuntu-latest
             python-version: '3.10'
-            toxenv: py310-test-oldest
+            toxenv: py310-test-all-latest
 
           - name: oldest supported versions
             os: ubuntu-latest
@@ -44,7 +44,6 @@ jobs:
       - name: Install Dependencies
         shell: bash -el {0}
         run: |
-          conda install pip
           pip install tox-conda
       - name: Run Tests
         shell: bash -el {0}
