--- a/.github/workflows/test-conda.yaml
+++ b/.github/workflows/test-conda.yaml
@@ -20,7 +20,7 @@ jobs:
           - name: latest supported versions
             os: ubuntu-latest
             python-version: '3.10'
-            toxenv: py310-test-all-latest
+            toxenv: py310-test-latest
 
           - name: oldest supported versions
             os: ubuntu-latest
