--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ conda_install_args=
 
 # Run the tests in a temporary directory to make sure that we don't import
 # this package from the source tree
-# changedir = .tmp/{envname}
+changedir = .tmp/{envname}
 
 commands =
     pip freeze
