--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
-requires = tox-conda
+requires = 
+    tox-conda
+    setuptools >= 30.3.0
+    pip >= 19.3.1
 envlist =
 	py{37,310}-test{,-latest,-oldest}
 
@@ -30,5 +33,3 @@ commands =
     which virtualenv
     which python
     python --version
-    pytest --version
-    python -c "import cobaya; print(cobaya.__version__)"
