--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,9 +35,7 @@ jobs:
     needs:
       - build
     runs-on: ubuntu-latest
-    environment:
-      name: testpypi
-      url: https://test.pypi.org/p/itrh-gha-test
+    environment: testpypi
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
@@ -48,3 +46,6 @@ jobs:
           path: dist/
       - name: Publish package distributions to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
+          print-hash: true
