--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,8 +36,8 @@ jobs:
       - build
     runs-on: ubuntu-latest
     environment: testpypi
-    # permissions:
-      # id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
       - name: Download all the dists
         uses: actions/download-artifact@v3
@@ -47,7 +47,7 @@ jobs:
       - name: Publish package distributions to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
+          # user: __token__
           repository-url: https://test.pypi.org/legacy/
-          print-hash: true
-          password: ${{ secrets.TEST_PYPI_TOKEN }}
+          # print-hash: true
+          # password: ${{ secrets.TEST_PYPI_TOKEN }}
