--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,9 +35,10 @@ jobs:
     needs:
       - build
     runs-on: ubuntu-latest
-    environment: testpypi
-    # permissions:
-      # id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+    environment:
+      name: testpypi
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
       - name: Download all the dists
         uses: actions/download-artifact@v3
@@ -47,7 +48,7 @@ jobs:
       - name: Publish package distributions to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
+          # user: __token__
           repository-url: https://test.pypi.org/legacy/
-          print-hash: true
-          password: ${{ secrets.TEST_PYPI_TOKEN }}
+          # print-hash: true
+          # password: ${{ secrets.TEST_PYPI_TOKEN }}
