--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ authors = [
 	{name = "Ian Harrison", email = "harrisoni@cardiff.ac.uk"}
 ]
 description = "A package for testing and learning gha/tox/conda/setuptools"
-readme = "README.rst"
+readme = "README.md"
 requires-python = ">=3.8, <3.12"
 license = {text = "CC-BY"}
 dependencies = [
